//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table VerificationRequest {
  id String [pk]
  identifier String [unique, not null]
  token String [unique, not null]
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  attempts Int [not null, default: 0]

  indexes {
    (identifier, token) [unique]
  }
}

Table User {
  id String [pk]
  first_name String [not null]
  last_name String [not null]
  email String [unique, not null]
  role String [default: 'user']
  password String [not null]
  emailVerified DateTime
  image String
  active Boolean [default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address Address [not null]
  cart Cart
  orders Order [not null]
  payments Payment [not null]
}

Table Payment {
  id String [pk]
  payment_date DateTime [not null]
  payment_method String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  User User [not null]
}

Table Address {
  id String [pk]
  city String [not null]
  street1 String [not null]
  street2 String
  number Int
  country String [not null]
  zip_code String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique, not null]
  user User [not null]
}

Table Cart {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  items CartItem [not null]
}

Table CartItem {
  id String [pk]
  quantity Int [not null, default: 1]
  cartId String [not null]
  productId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cart Cart [not null]
  product ProductVariation [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  filename String
  active Boolean [not null, default: true]
  gender String [not null, default: 'Unisex']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subcategories SubCategory [not null]
}

Table SubCategory {
  id String [pk]
  name String [not null]
  filename String
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  categoryId String
  products Product [not null]
  Category Category
}

Table Product {
  id String [pk]
  name String [not null]
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subCategoryId String
  SubCategory SubCategory
  productVariation ProductVariation [not null]
}

Table ProductVariation {
  id String [pk]
  color String
  colorHex String
  contexture String
  description String[] [not null]
  price Float [not null]
  totalStock Int [not null, default: 0]
  productId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Image Image [not null]
  Product Product
  SizeStock ProductVariationSizeStock [not null]
  CartItem CartItem [not null]
  Order_Item Order_Item [not null]
}

Table Image {
  id String [pk]
  filename String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  productVariationId String
  ProductVariation ProductVariation
}

Table ProductVariationSizeStock {
  id String [pk]
  stock Int [not null, default: 0]
  size String
  SKU String
  productVariationId String
  ProductVariation ProductVariation
}

Table Order {
  id String [pk]
  order_date DateTime [not null]
  total_price Float [not null]
  status String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user User [not null]
  items Order_Item [not null]
}

Table Order_Item {
  id String [pk]
  quantity Int [not null]
  price Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderId String [not null]
  productId String [not null]
  Order Order [not null]
  Product ProductVariation [not null]
}

Ref: Payment.userId > User.id [delete: Cascade]

Ref: Address.userId > User.id [delete: Cascade]

Ref: Cart.userId - User.id [delete: Cascade]

Ref: CartItem.cartId > Cart.id [delete: Cascade]

Ref: CartItem.productId > ProductVariation.id [delete: Cascade]

Ref: SubCategory.categoryId > Category.id

Ref: Product.subCategoryId > SubCategory.id

Ref: ProductVariation.productId > Product.id [delete: Cascade]

Ref: Image.productVariationId > ProductVariation.id [delete: Cascade]

Ref: ProductVariationSizeStock.productVariationId > ProductVariation.id [delete: Cascade]

Ref: Order.userId > User.id [delete: Cascade]

Ref: Order_Item.orderId > Order.id [delete: Cascade]

Ref: Order_Item.productId > ProductVariation.id [delete: Cascade]